kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: hm3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hm3
  template:
    metadata:
      labels:
        app: hm3
    spec:
      nodeSelector:
        homework: "true"
      
      containers:
      - name: nginx
        image: nginx:1.25.3
        lifecycle:
          preStop:
            exec:
              command: ["rm", "-rf", "/homework/index.html"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: content
          mountPath: "/homework"
        - name: nginx-config
          mountPath: "/etc/nginx"
          readOnly: true
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      
      dnsPolicy: Default
      
      volumes:
      - name: content
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
