kubernetes-networks/ingress-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
  name: nginx-ingress-red
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /homepage
        pathType: Exact
        backend:
          service:
            name: service-nginx
            port:
              number: 8000
